successful YT vid audio extraction, no success with plotting graph yet :/

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
   </head>
   <body>
     <canvas id="c" width="640" height="300"></canvas><br />
-    <audio id="audio" style="display: none" controls></audio>
+    <audio id="audio" controls></audio>
   </body>
 </html>
